# Movie-Rating-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: dca6c940aed3_create_initial_schema.py
app/: main.py
app/config/: logging.py
app/controller/: api_v1.py  deps.py  health.py  movies.py
app/db/: session.py
app/exceptions/: api_exceptions.py
app/models/: __init__.py  director.py  genre.py  movie.py  movie_genres.py  movie_rating.py
app/repositories/: movies_repository.py
app/schemas/: common.py  director.py  genre.py  movie.py  rating.py
app/services/: movies_service.py
scripts/: seed_check.py  seeddb.sql
