[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ilya <ilyaravand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
pydantic-settings = "^2.12.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
